--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,9 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "graphql": "16.3.0",
+    "apollo-server-express":"3.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
